# dpi-workops

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.claude/skills/arh-universal-frontend-design/: SKILL.md
.claude/skills/arh-universal-frontend-design/references/: repo-profile.md
.github/workflows/: deploy.yml
config/: parties.yaml  projects.yaml
services/api/: .env.example  main.py  pyproject.toml
services/api/app/: config.py  database.py
services/api/app/routers/: actions.py  approvals.py  audit.py  gmail.py  health.py  projects.py
services/api/app/schemas/: action.py  approval.py  audit.py  common.py  project.py
services/api/app/services/: audit_logger.py  gmail_fetcher.py  project_classifier.py  seed.py
src/: main.tsx
src/app/: App.tsx  store.ts
src/data/: mock.ts
src/design-system/layout/: EvidenceRailShell.tsx  ProjectRail.tsx  TopCommandBar.tsx
src/design-system/primitives/: Badge.tsx  Button.tsx  SourceChip.tsx
src/domain/actions/: ActionCard.tsx
src/domain/approvals/: ApprovalCard.tsx
src/lib/: api.ts
src/pages/: ActionsPage.tsx  ApprovalsPage.tsx  AuditPage.tsx  DraftsPage.tsx  SettingsPage.tsx  TodayPage.tsx
src/styles/: globals.css  tokens.css
src/types/: index.ts
