[project]
name = "dpi-workops-api"
version = "0.1.0"
description = "DPI Personal WorkOps Command Center — local FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "aiofiles>=24.1.0",
    "httpx2>=2.4.0",
    "google-auth>=2.38.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.165.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
